[project]
name = "outtaband"
version = "0.0.0"
description = "async band watcher with telegram advisories"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20",
  "apscheduler>=3.10",
  "fastapi>=0.112",
  "httpx>=0.27",
  "prometheus-fastapi-instrumentator>=6.1",
  "pydantic-settings>=2.3",
  "pydantic>=2.8",
  "python-telegram-bot>=21.4",
  "structlog>=24.1",
  "uvicorn[standard]>=0.30",
  "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "hypothesis>=6.112",
  "ruff>=0.7",
  "mypy>=1.11",
  "actionlint-py>=1.7.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","PIE","PYI","Q","RUF","SIM"]
lint.ignore = ["E501"]
lint.allowed-confusables = ["–", "σ"]
exclude = ["tests/__pycache__"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
exclude = "(?x)\n  ^tests/\n"

[tool.pytest.ini_options]
addopts = "-q -ra --disable-warnings"
testpaths = ["tests"]
markers = [
  "slow: potentially long-running",
  "net: hits network if not mocked"
]

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*", ".venv/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
  "band_logic",
  "config",
  "db_repo",
  "jobs",
  "main",
  "net",
  "policy",
  "price_sources",
  "runtime",
  "shared_types",
  "tgbot",
]

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
  "README.*",
  "pyproject.toml",
  "docker-compose.yml",
  "Dockerfile",
]
